# multty

./: CMakeLists.txt  README.MD  TODO
cmake/: FindRAGEL.cmake
contrib/: test-terminal.sh
doc/: ACL.MD  ASCII.MD  CONTAINER.MD  IANA.MD  LORATYPE.MD  MENU.MD  PROGRAMS.MD  SASL.MD  SHELL.MD  STREAMS.MD  SYSLOG.MD  USING.MD  UTF8.MD  ZMODEM.MD
doc/pix/: multty.graphml
include/arpa2/: multty.h
lib/: CMakeLists.txt  Makefile  close.c  dispint.c  dispstrm.c  escape.c  flush.c  mtyp-int.h  mtystderr.c  mtystdin.c  mtystdout.c  open.c  outstr.c  progdescr.c  progdrop.c  progfind.c  proghave.c  progmkid.c  prograw.c  progset.c  progswitch.c  progvar.c  puts.c  unescape.c  vin.c  vout.c  write.c
src/: CMakeLists.txt  COLOUR.MD  Makefile  README.MD  colour-alt.c  colour-gentab.py  colour.h  dotty.c  dotty.c.future  pretty.c
src/loratype/: crc8.c  display.c  loratype.h  pty.rl
test/: CMakeLists.txt  generate.py  inflow.c  verify.py
